[gd_scene load_steps=10 format=2]

[ext_resource path="res://ressources/mine.png" type="Texture" id=1]
[ext_resource path="res://entities/projectiles/Mine.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 15.7433

[sub_resource type="CircleShape2D" id=2]
radius = 45.8184

[sub_resource type="CircleShape2D" id=3]
radius = 18.2888

[sub_resource type="Animation" id=4]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Mine" type="RigidBody2D"]
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 5.0
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
visible = false
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]
visible = false
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 0.2
one_shot = true
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
initial_velocity = 250.0
color = Color( 1, 0, 0, 1 )

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_ActivationTimer_timeout"]
